<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robomaster_demo</name>
  <version>0.0.1</version>
  <description>ROS2 Robomaster EP Core demo</description>
  <maintainer email="contact@romainrossi.fr">rrossi</maintainer>
  <license>Public Licence</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>robomaster_msgs</exec_depend>
  <exec_depend>robomaster_ros</exec_depend>
  <exec_depend>joy_linux</exec_depend>
  <exec_depend>joy_teleop</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
